# ORKUZ

./: .dockerignore  .editorconfig  .gitignore  404.html  LICENSE  README.md  index.html
.github/workflows/: backend-release.yml  backend.yml  docs.yml  frontend-playwright.yml  frontend.yml  node-package-release.yml  node-package.yml
backend/: .coveragerc  .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/accounts/: tokens.py  utils.py
backend/accounts/api/: __init__.py  auth.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/schema/: auth.py
backend/accounts/tests/: factories.py  test_jwt_auth_views.py  test_user_model.py
backend/backend/: index.html
backend/core/: api.py  asgi.py  urls.py
backend/core/settings/: base.py
docs/: README.md  mkdocs.yml  pyproject.toml
docs/docs/: index.md
docs/docs/node-package/: node-package.md
documentation/documentation/: index.html
frontend/: .gitignore  README.md  docker-compose.yml  jest.config.ts  jest.setup.ts  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/frontend/: index.html
frontend/src/api/: axios-client.ts
frontend/src/app/: actions.ts  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: ColorModeToggle.tsx  UserLoginIndicator.tsx
node-package/: .npmignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsup.config.ts  vitest.config.ts
node-package/.changeset/: lovely-kids-lie.md
node-package/node-package/: index.html
node-package/src/: index.ts
search/: search_index.json
(+18 files in other folders)
