[tool.poetry]
name = "backend"
version = "0.1.0"
description = "REST API built for the purpose of ORKUZ final paper."
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0.6"
django-ninja = "1.1.0"
django-cors-headers = "4.3.1"
django-environ = "0.11.2"
psycopg = {version = "3.1.18", extras = ["binary"]}
django-ninja-extra = "0.20.7"
django-ninja-jwt = "5.3.1"
django-extensions = "^3.2.3"
dj-database-url = "2.1.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.1"
ruff = "^0.4.4"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore = ['F401', 'F403']
