[tool.poetry]
name = "docs"
version = "0.1.0"
description = "ORKUZ documentation deployed to Github Pages"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "9.5.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
